# AndroidDemos

./: README.md
NativeLibrariesDemo/: README.md
NativeLibrariesDemo/ExternalLibraries/ExternalSharedLibrary/: CMakeLists.txt
NativeLibrariesDemo/ExternalLibraries/ExternalSharedLibrary/Sources/: ExternalSharedLibrary.cpp  ExternalSharedLibrary.hpp
NativeLibrariesDemo/ExternalLibraries/ExternalStaticLibrary/: CMakeLists.txt
NativeLibrariesDemo/ExternalLibraries/ExternalStaticLibrary/Sources/: ExternalStaticLibrary.cpp  ExternalStaticLibrary.hpp
NativeLibrariesDemo/NativeLibrariesDemo/: build.gradle  settings.gradle
NativeLibrariesDemo/NativeLibrariesDemo/app/: CMakeLists.txt  build.gradle
NativeLibrariesDemo/NativeLibrariesDemo/app/src/androidTest/java/com/roccoormm/nativelibrariesdemo/: ExampleInstrumentedTest.java
NativeLibrariesDemo/NativeLibrariesDemo/app/src/main/: AndroidManifest.xml
NativeLibrariesDemo/NativeLibrariesDemo/app/src/main/cpp/: native-lib.cpp
NativeLibrariesDemo/NativeLibrariesDemo/app/src/main/java/com/roccoormm/nativelibrariesdemo/: MainActivity.java
NativeLibrariesDemo/NativeLibrariesDemo/app/src/main/res/layout/: activity_main.xml  content_main.xml
NativeLibrariesDemo/NativeLibrariesDemo/app/src/main/res/menu/: menu_main.xml
NativeLibrariesDemo/NativeLibrariesDemo/app/src/main/res/values/: strings.xml
NativeLibrariesDemo/NativeLibrariesDemo/app/src/test/java/com/roccoormm/nativelibrariesdemo/: ExampleUnitTest.java
NativeLibrariesDemo/NativeLibrariesDemo/externalsharedlibrary/: build.gradle
NativeLibrariesDemo/NativeLibrariesDemo/externalsharedlibrary/src/androidTest/java/com/roccoormm/externallibrary/: ExampleInstrumentedTest.java
NativeLibrariesDemo/NativeLibrariesDemo/externalsharedlibrary/src/main/: AndroidManifest.xml
NativeLibrariesDemo/NativeLibrariesDemo/externalsharedlibrary/src/test/java/com/roccoormm/externallibrary/: ExampleUnitTest.java
NativeLibrariesDemo/NativeLibrariesDemo/externalstaticlibrary/: build.gradle
NativeLibrariesDemo/NativeLibrariesDemo/externalstaticlibrary/src/androidTest/java/com/roccoormm/externalstaticlibrary/: ExampleInstrumentedTest.java
NativeLibrariesDemo/NativeLibrariesDemo/externalstaticlibrary/src/main/: AndroidManifest.xml
NativeLibrariesDemo/NativeLibrariesDemo/externalstaticlibrary/src/main/res/values/: strings.xml
NativeLibrariesDemo/NativeLibrariesDemo/externalstaticlibrary/src/test/java/com/roccoormm/externalstaticlibrary/: ExampleUnitTest.java
NativeLibrariesDemo/NativeLibrariesDemo/nativesharedlibrary/: CMakeLists.txt  build.gradle
NativeLibrariesDemo/NativeLibrariesDemo/nativesharedlibrary/src/androidTest/java/com/roccoormm/nativesharedlibrary/: ExampleInstrumentedTest.java
NativeLibrariesDemo/NativeLibrariesDemo/nativesharedlibrary/src/main/: AndroidManifest.xml
NativeLibrariesDemo/NativeLibrariesDemo/nativesharedlibrary/src/main/jni/: NativeSharedLibrary.cpp  NativeSharedLibrary.hpp
NativeLibrariesDemo/NativeLibrariesDemo/nativesharedlibrary/src/test/java/com/roccoormm/nativesharedlibrary/: ExampleUnitTest.java
NativeLibrariesDemo/NativeLibrariesDemo/nativestaticlibrary/: CMakeLists.txt  build.gradle
NativeLibrariesDemo/NativeLibrariesDemo/nativestaticlibrary/src/androidTest/java/com/roccoormm/nativestaticlibrary/: ExampleInstrumentedTest.java
NativeLibrariesDemo/NativeLibrariesDemo/nativestaticlibrary/src/main/: AndroidManifest.xml
NativeLibrariesDemo/NativeLibrariesDemo/nativestaticlibrary/src/main/jni/: NativeStaticLibrary.cpp  NativeStaticLibrary.hpp
NativeLibrariesDemo/NativeLibrariesDemo/nativestaticlibrary/src/main/res/values/: strings.xml
NativeLibrariesDemo/NativeLibrariesDemo/nativestaticlibrary/src/test/java/com/roccoormm/nativestaticlibrary/: ExampleUnitTest.java
SDL2AppTemplate/: .gitignore  README.md
SDL2AppTemplate/AppProject/: CMakeLists.txt
SDL2AppTemplate/AppProject/Main/: CMakeLists.txt
SDL2AppTemplate/AppProject/Main/Sources/: main.cpp
SDL2AppTemplate/SDL2AppTemplate/: build.gradle  settings.gradle
SDL2AppTemplate/SDL2AppTemplate/sdl2app/: build.gradle
SDL2AppTemplate/SDL2AppTemplate/sdl2app/src/main/: AndroidManifest.xml
SDL2AppTemplate/SDL2AppTemplate/sdl2app/src/main/java/com/roccoormm/sdl2app/: MainActivity.java
SDL2AppTemplate/SDL2AppTemplate/sdl2app/src/main/res/values/: strings.xml
SDL2AppTemplate/SDL2AppTemplate/sdl2lib/: build.gradle
